[package]
name = "gpu_engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# webgpu フィーチャーを確実に含めてください
wgpu = { version = "24.0", features = ["webgpu", "webgl"] }
# もしこれでもダメな場合は、明示的に以下を試してください
# wgpu = { version = "24.0", features = ["js"] }
# wgpu に webgl フィーチャーも追加して互換性を高めます
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
bytemuck = { version = "1.21", features = ["derive"] }


[dependencies.web-sys]
version = "0.3.74" 
features = [
    "HtmlVideoElement",
    "HtmlCanvasElement",
    "Window",
    "Navigator",
    "console",
    "Gpu", 
    "GpuDevice",
    "GpuQueue"
]